@@ -953,7 +953,8 @@ class TestMailResponse(unittest.TestCase):
         self.assertEqual(message.__class__, MIMEPart)
         payload = message.get_payload()[0]
         self.assertEqual(payload.get('Content-Transfer-Encoding'), 'base64')
-        self.assertEqual(payload.get_payload(), base64.encodestring(data))
+        self.assertEqual(payload.get_payload(),
+                         base64.encodestring(data).decode('ascii'))
 
     def test_to_message_multipart_with_qpencoding(self):
         from pyramid_mailer.response import MIMEPart
@@ -972,7 +973,8 @@ class TestMailResponse(unittest.TestCase):
         payload = message.get_payload()[0]
         self.assertEqual(payload.get('Content-Transfer-Encoding'),
                          'quoted-printable')
-        self.assertEqual(payload.get_payload(), quopri.encodestring(data))
+        self.assertEqual(payload.get_payload(),
+                         quopri.encodestring(data).decode('ascii'))
 
     def test_to_message_with_parts(self):
         from pyramid_mailer.response import MIMEPart
