@@ -1,6 +1,9 @@
 After 0.10 (unreleased)
 -----------------------
 
+- Issue #24:  ensure that ``pyramid_mailer.response.to_message`` returns
+  text under Python 3.x.
+
 - Dropped support for Python 2.5.
 
 0.10 (2012-11-22)
